Fixed table height on smaller screens and pagination

--- a/ui/src/assets/styles/app.scss
+++ b/ui/src/assets/styles/app.scss
@@ -1200,7 +1200,6 @@ body {
     }
   }
   .map-wrapper {
-    min-height: 300px;
     .map {
       flex-grow: 1;
     }
